fix alignment issue

--- a/src/styles.css
+++ b/src/styles.css
@@ -132,3 +132,7 @@ color: red;
 .align-answer{
   margin: 50px;
 }
+/* 
+.scroll{
+  height: calc(100vh - 500px);
+} */
